# libdnf.js

./: .gitignore  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yaml  release.yaml
lib/: data.d.ts  index.d.ts  index.js  index.ts  libdnf5.d.node.ts  query.d.ts  query.ts  transaction.d.ts  transaction.ts
scripts/: build.sh
src/: callbacks.hxx  goal.cxx  goal.hxx  js-data.cxx  js-data.hxx  node.cxx  query.cxx  query.hxx  schema.cxx  schema.hxx  transaction.cxx  transaction.hxx
src/native/: common.hxx  index.cxx  js-data.cxx  js-data.hxx  query.cxx  query.hxx
